--- a/style.css
+++ b/style.css
@@ -1,11 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lobster&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
+  display: flex;
+  justify-content: center;
   height: 100vh;
-  font-family: "Lobster", sans-serif;
+  font-size: 15px;
   font-weight: 400;
   font-style: normal;
   color: #ffffff;
   background: no-repeat linear-gradient(180deg, #615dad, #806ab9, #9f77c4, #bd86d0, #da95dc, #e8a5da, #f3b6d8, #ffc8da);
+}
+
+.main {
+  max-width: 380px;
+  margin: 5rem;
+  text-align: center;
+}
+
+.main__img {
+  display: flex;
+}
+
+.main__img img {
+  max-width: 100%;
+  border-radius: 10px 10px 0 0;
+}
+
+.main__descr {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 2rem 1.75rem;
+  background-color: #283e50;
+}
+
+.main__title {
+  font-size: 3rem;
+  font-family: "Lobster", sans-serif;
+  letter-spacing: 0.1rem;
+  margin-bottom: 2rem;
+}
+
+.main__text {
+  line-height: 1.35;
 }
