--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ button:hover {
 body {
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 100vh;
   font-size: 15px;
   font-weight: 400;
@@ -30,7 +31,6 @@ body {
 
 .main {
   max-width: 380px;
-  margin: 5rem;
   text-align: center;
 }
 
