--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
 }
 
 .game__menu--player {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -150,6 +150,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   border: 1px solid #283e50;
+  box-shadow: 16px 17px 18px -19px #283e50, 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 .game__box {
@@ -159,10 +160,10 @@ body {
   text-decoration: none;
   margin: 0px;
   padding-block: 5px;
-  background-color: rgba(250, 250, 250, 0.6);
+  background-color: rgba(250, 250, 250, 0.4);
 }
 
 .game__box:hover {
-  opacity: 0.8;
+  background-color: rgba(250, 250, 250, 0.6);
   transition: ease .4s;
 }
